[tool.poetry]
name = "hydrolib-test"
version = "0.6.0"
description = "Python wrappers around D-HYDRO Suite."
authors = ["Deltares"]
license = "MIT"
packages = [
    { include = "hydrolib"},
]
readme = "README.md"
repository = "https://github.com/deltares/hydrolib-core"
documentation = "https://deltares.github.io/HYDROLIB-core"
homepage = "https://deltares.github.io/HYDROLIB-core"

[tool.poetry.urls]
"issue tracker" = "https://github.com/Deltares/HYDROLIB-core/issues"

[tool.poetry.dependencies]
python = "^3.8"
hydrolib-core = "^0.7.0"
geopandas = "0.13.1"
contextily = "^1.4.0"
rasterstats = "^0.19.0"
scipy = "1.6"
tqdm = "^4.66.1"
dask = "2023.5.0"
xarray = "2023.1.0"
traitlets = "5.9.0"
netcdf4 = "1.6.4"
pyogrio = "^0.9.0"

[tool.poetry.dev-dependencies]
poetry2conda = "^0.3.0"
pytest = "^6.2"
black = "^22.1"
isort = "^5.8"
mkdocs = "^1.2"
mkdocs-material = "^8.0"
mkdocstrings = "^0.16"
mkdocs-autorefs = "^0.3, !=0.3.1"
mkdocs-macros-plugin = "^0.6.3"
pytest-cov = "^2.11"
pymdown-extensions = "^9.1"
commitizen = "^2.17"
flake8 = "^3.9.2"
mypy = "^0.910"
devtools = "^0.6.1"
matplotlib = "^3.4"
mkdocs-table-reader-plugin = "^0.6.1"
openpyxl = "^3.0.9"
mike = "^1.1.2"
jinja2 = "<3"
markupsafe = "<2.1"
mkdocs-jupyter = "^0.21.0"
jupyter = "^1.0.0"
ipykernel = "^6.15.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.6.0"
tag_format = "$version"
version_files = [
    "hydrolib/core/__init__.py",
    "pyproject.toml:version",
    "tests/data/reference/dimr/test_serialize.xml:createdBy",
    "tests/data/reference/model/test_dimr_model_save.xml:createdBy",
    "tests/data/reference/crosssection/crsloc.ini:HYDROLIB-core"
]
changelog_file = "docs/changelog.md"

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.poetry2conda]
name = "hydrolib"

[tool.pytest.ini_options]
markers = [
    "plots",
    "docker"
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

