[tool.poetry]
name = "hydrolib"
version = "0.4.0"
description = "HYDROLIB tools for hydrodynamic and hydrological modelling workflows"
authors = ["Deltares"]
maintainers = [
    "Arthur van Dam <arthur.vandam@deltares.nl>",
    "Ruud Hurkmans <r.hurkmans@hkv.nl>",
    ]
license = "LGPL"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=1.2, <3.0"
geopandas = ">=0.13.1, <2.0"
xarray = ">=2023.1.0"
hydrolib-core = "^0.9.0"
numpy = ">=1.21 <3.0"
matplotlib = ">=3.5"
openpyxl = ">=3"
scipy = ">=1.6"
tqdm = ">=4.66.1"
rasterio = ">=1.3"
netcdf4 = ">=1.6.4"
rasterstats = ">=0.19"
jupyter = ">=1.0"
contextily = ">=1.4"
dask = ">=2023.5.0"
pyogrio = ">=0.9"
folium = ">=0.18.0"
pillow = ">=11.0.0"
mplleaflet = ">=0.0.5"
ipython = ">=8.29.0"
xlrd = ">=2.0.1"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
black = { version = "*", allow-prereleases = true }
isort = ">=5.8"
mkdocs = ">=1.1"
mkdocs-material = "^7.1"
mkdocstrings = "^0.15"
mkdocs-autorefs = "^0.1"
pytest-cov = ">=2.11"
pymdown-extensions = ">=8.1"
commitizen = "^2.17"
flake8 = ">=3.9"
mypy = ">=0.910"
devtools = ">=0.6"
poetry2conda = ">=0.3.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.1"
tag_format = "$version"
version_files = [
    "hydrolib/post/__init__.py",
    "pyproject.toml:version"
]
changelog_file = "docs/changelog.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.poetry2conda]
name = "hydrolib"

[tool.poetry2conda.dependencies]
python = { channel = "conda-forge" }
pandas = { channel = "conda-forge" }
geopandas = { channel = "conda-forge" }
xarray = { channel = "conda-forge" }
hydrolib-core = { channel = "pip" }
shapely = { channel = "conda-forge" }
matplotlib = { channel = "conda-forge" }
numpy = { channel = "conda-forge" }
openpyxl = { channel = "conda-forge" }
scipy = { channel = "conda-forge" }
jupyter = { channel = "conda-forge" }
fiona = { channel = "conda-forge" }
contextily = { channel = "conda-forge" }

[tool.pytest.ini_options]
markers = [
  "plot: tests that open plot windows",
  "slow: tests that are known to run slowly",
  "dll: tests that are dependent on Windows DLL's"
]
