[metadata]
name = hydrolib-cmt
author = Daniel Tollenaar
author_email = daniel@d2hydro.nl
version = 0.3.0
description = Case Management Tools for DHYDRO
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
  openpyxl
  pandas
  netCDF4
  simplejson
  hydrolib-core==0.3.0
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
stowabui.data = patronen.xlsx

[options.extras_require]
test =
    pytest
    coverage
    pytest-flakes
    pytest-black
docs =
    mkdocs

[tool:pytest]
addopts = --black --flakes --ignore=tests/data

[flake8]
max-line-length = 88

[isort]
atomic = true
force_alphabetical_sort = true
force_single_line = true
include_trailing_comma = true
line_length = 88
lines_after_imports = 2
multi_line_output = 3
skip = bin,lib
use_parentheses = true
